--- a/Source/Web/MvcTemplate.Web/Web.config
+++ b/Source/Web/MvcTemplate.Web/Web.config
@@ -4,7 +4,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=MvcTemplate;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=GMANOV\SQLEXPRESS;Initial Catalog=MvcTemplate;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
