added joke and joke category

--- a/Source/Data/MvcTemplate.Data.Models/MvcTemplate.Data.Models.csproj
+++ b/Source/Data/MvcTemplate.Data.Models/MvcTemplate.Data.Models.csproj
@@ -58,11 +58,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Joke.cs" />
+    <Compile Include="JokeCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MvcTemplate.Data.Common\MvcTemplate.Data.Common.csproj">
+      <Project>{A573E50C-71CB-4E12-86A4-7687474CEE09}</Project>
+      <Name>MvcTemplate.Data.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
